# mcp-for-ads-v2

./: .env  .env.example  .gitignore  BETA_RELEASE_PLAN_RU.md  CHECKLIST_RU.md  CONNECTING.md  CREATIVE_BRIEF_RU.md  DEPLOYING.md  README.md  TESTING.md  ads_config.example.yaml  ads_config.yaml  pyproject.toml
.codex/: config.example.toml
config/policies/: safety.example.yaml
config/providers/: google_ads.example.yaml  meta_ads.example.yaml  tiktok_ads.example.yaml  yandex_direct.example.yaml
deploy/: adforge-mcp-http.service.example  adforge-mcp-web.service.example  adforge-mcp.env.example  nginx.adforge-mcp.example.conf
docs/beta/: BETA_ACCEPTANCE_CHECKLIST_RU.md  BETA_CAPABILITIES_RU.md  BETA_DEMO_CHECKLIST_RU.md  BETA_DEMO_SCRIPT_RU.md  BETA_READY_MVP_RU.md  BETA_SECURITY_RU.md  CLAUDE_CONNECTOR_SETUP_RU.md  CODEX_MCP_SETUP_RU.md  DASHBOARD_CONNECTIONS_RU.md  DIAGNOSTICS_RU.md  END_TO_END_BETA_VALIDATION_RU.md  ENVIRONMENT_RU.md  GO_NO_GO_RU.md  HOSTED_CONNECTION_STORE_RU.md  HOSTED_MCP_TRANSPORT_RU.md  LIVE_BETA_STATUS_RU.md  LIVE_VPS_COMMANDS_RU.md  LIVE_VPS_RUNBOOK_RU.md  MCP_BETA_ONBOARDING_RU.md  MCP_READ_TOOLS_RU.md  MCP_TOOLS_REFERENCE_RU.md  META_OAUTH_FLOW_RU.md  OAUTH_MANUAL_CHECKLIST_RU.md  OTHER_MCP_CLIENTS_RU.md  PARTNER_OAUTH_FLOWS_RU.md  PREVIEW_ONLY_ACTIONS_RU.md  REVERSE_PROXY_RU.md  SECURITY_HARDENING_RU.md  STORAGE_AND_BACKUP_RU.md  (+3 more)
research/: internet-benchmark-notes.md  local-source-notes.md  provider-capability-matrix.md
scripts/: build_last_two_weeks_workbook.mjs  export_last_two_weeks_report.py  smoke_hosted_beta.py  smoke_mcp_beta.py
(+94 files in other folders)
