[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-for-ads"
version = "0.1.0"
description = "MCP server for Google Ads, Meta Ads, TikTok Ads, and Yandex Direct"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.9.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "tenacity>=8.3.0",
]

[project.optional-dependencies]
google = [
  "google-ads>=25.1.0",
  "google-analytics-data>=0.18.12",
  "google-api-python-client>=2.169.0",
]
meta = [
  "facebook-business>=20.0.0",
]
tiktok = []
yandex = []
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]

[project.scripts]
ad-mcp-server = "ad_mcp.server:main"
ad-mcp-web = "ad_mcp.web.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
